Use dict instead of map in repospec attributes